# Cartorio

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  :memory_  AGENTS.md  CLAUDE.md  COMPLETION_AUDIT_2026-06-29-FINAL.md  COMPLETION_AUDIT_2026-06-29.md  Dockerfile  Makefile  PROMPT.MD  PROMPT.json  README.md  SESSION_SUMMARY_2026-06-23.md  SESSION_SUMMARY_2026-06-25-noite.md  SESSION_SUMMARY_2026-06-25-tarde.md  SESSION_SUMMARY_2026-06-25-tarde2.md  SESSION_SUMMARY_2026-06-25.md  SESSION_SUMMARY_2026-06-26-manha.md  SESSION_SUMMARY_2026-06-26-tarde2.md  SESSION_SUMMARY_2026-06-26-turno6.md  SESSION_SUMMARY_2026-06-26-validation.md  SESSION_SUMMARY_2026-06-26.md  SESSION_SUMMARY_2026-06-29-turno17.md  SESSION_SUMMARY_2026-06-29-turno18.md  SESSION_SUMMARY_2026-06-29.md  SESSION_SUMMARY_2026-06-30-1535.md  SESSION_SUMMARY_2026-06-30-1546.md  SESSION_SUMMARY_2026-06-30-1555.md  SESSION_SUMMARY_2026-06-30-1605.md  VALIDATION_COMPLETE_2026-06-26.md  VALIDATION_FINAL_2026-06-26.md  VALIDATION_REPORT_2026-06-26.md  VALIDATION_SUMMARY_2026-06-26.md  VALIDATION_TURNO_17_2026-06-29.md  VALIDATION_TURNO_18_2026-06-29.md  VALIDATION_TURNO_19_2026-06-29.md  VALIDATION_TURNO_20_2026-06-29.md  VALIDATION_TURNO_21_2026-06-29.md  (+13 more)
backend/: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  coverage.json  full_stdout.txt  mcp_server.py  pyproject.toml  test_script.py  tools_description.json
backend/alembic/: README.md  env.py  env_minimal.py
backend/app/: __init__.py  __init__.py,cover  config.py  config.py,cover  db.py  db.py,cover  main.py  main.py,cover  (+1 more)
(+922 files in other folders)
